# sikulpy

./: .gitignore  .travis.yml  LICENSE.txt  README.md  README.txt  csikuli.c  pyproject.toml  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
sikuli/: __init__.py  find.py  run.py
sikuli/script/: __init__.py  app.py  env.py  exc.py  finder.py  image.py  key.py  location.py  match.py  pattern.py  rectangle.py  region.py  robot.py  screen.py  settings.py  sikulpy.py
test/: find.py  test-osx-grab.py  test.py  unit.py
test/unit/: test_rectangle.py
