[project]
name = "sikulpy"
version = "0.0"
authors = [{ name = "Shish", email = "shish@shishnet.org" }]
description = "An implementation of Sikuli for CPython"
readme = "README.md"
# autopy doesn't build on 3.14 yet
requires-python = ">=3.13,<3.14"
dependencies = [
    "autopy>=4.0.0",
    "pillow",
    "numpy",
    "mss",
    "pyperclip",
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/shish/sikulpy"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest-cov",
    "types-Pillow",
]

[tool.setuptools]
py-modules = ["sikuli"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 40"

[tool.coverage.run]
source = ["sikuli"]

[tool.mypy]
files = "sikuli"

[[tool.mypy.overrides]]
module = "autopy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyperclip.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytesseract.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pudb.*"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
sikulpy = "sikuli.run:main"
sikulpy-find = "sikuli.find:main"
